--- a/package.json
+++ b/package.json
@@ -25,11 +25,15 @@
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.6.0",
     "@babel/preset-env": "^7.6.0",
+    "address": "^1.1.2",
     "babel-loader": "^8.0.6",
     "babel-plugin-import": "^1.12.1",
     "cross-env": "^6.0.0",
     "dotenv-webpack": "^1.7.0",
+    "error-overlay-webpack-plugin": "^0.4.1",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
+    "node-notifier": "^5.4.3",
     "source-map-loader": "^0.2.4",
     "ts-loader": "^6.1.1",
     "typescript": "^3.6.3",
@@ -39,7 +43,8 @@
     "webpack": "^4.40.2",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.1",
-    "webpack-merge": "^4.2.2"
+    "webpack-merge": "^4.2.2",
+    "webpackbar": "^4.0.0"
   },
   "dependencies": {
     "vue": "^2.6.10",
